--- a/X-ray classification notebook.ipynb
+++ b/X-ray classification notebook.ipynb
@@ -1537,6 +1537,13 @@
     "# Conclusion ResNet101\n",
     "First thing to take into consideration is that the training time was longer then the other models but it wasn't to bad. Meaning that when we are looking solely at the final product and not the testing phase I am not going to hold the training time against the model. When we look at the confusion matrix we can see that this model has more problems when looking at the different angels (AP & L). The other models didn't really have this problem. Also when looking at the score table we can see that the accuarcy and the precision are worse with the 101 then with the 50. So for these reasons I would use the ResNet50 model. This one has the best outcomes of the three of them."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![X-ray Robot](Tables2.png)"
+   ]
   }
  ],
  "metadata": {
