--- a/X-ray classification notebook.ipynb
+++ b/X-ray classification notebook.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -659,21 +659,17 @@
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Aantal afbeeldingen per plot\n",
-    "fig, axs = plt.subplots(9, 5, figsize=(15, 20))  # 9 rijen, 5 kolommen = 45 max\n",
+    "fig, axs = plt.subplots(9, 5, figsize=(15, 20))  \n",
     "axs = axs.flatten()\n",
     "\n",
-    "# Zorg dat classes gedefinieerd zijn\n",
     "classes = ['AP #', 'AP non #', 'Cast # AP', 'Cast # L', 'Cast non AP', 'Cast non L', 'L #', 'L non #']\n",
     "\n",
-    "# Begin de plot-lus, maar maximaal 45 afbeeldingen\n",
     "for i, (image, truth, prediction) in enumerate(zip(images, labels, predictions)):\n",
-    "    if i >= len(axs):  # Maximaal 45\n",
+    "    if i >= len(axs):  \n",
     "        break\n",
     "\n",
-    "    probabilities = torch.sigmoid(prediction)  # Sigmoid voor multi-label classificatie\n",
+    "    probabilities = torch.sigmoid(prediction)  \n",
     "\n",
-    "    # Top 3 voorspellingen\n",
     "    top3_indices = torch.argsort(probabilities, descending=True)[:3]\n",
     "    top3_probs = [round(probabilities[idx].item(), 2) for idx in top3_indices]\n",
     "    top3_labels = [classes[idx] for idx in top3_indices]\n",
@@ -1542,7 +1538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![X-ray Robot](Tables2.png)"
+    "![Tables2](Tables2.png)"
    ]
   }
  ],
